@@ -10,7 +10,9 @@ import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
@@ -20,36 +22,47 @@ public class ProductService {
     ProductMapper productMapper;
 
     public List<ProductResponse> createProducts(List<ProductCreationRequest> requests) {
+        if (requests == null || requests.isEmpty()) {
+            return Collections.emptyList();
+        }
         List<Product> products = requests.stream()
                 .map(productMapper::toProduct)
-                .toList();
+                .collect(Collectors.toList());
+
         List<Product> savedProducts = productRepository.saveAll(products);
         return productMapper.toProductResponseList(savedProducts);
     }
 
+
     public List<ProductResponse> getAllProducts() {
         return productMapper.toProductResponseList(productRepository.findAll());
     }
+
     public ProductResponse getProductById(String id) {
         return productMapper.toProductResponse(productRepository.findById(id).orElseThrow(() -> new RuntimeException("Không tìm thấy sản phẩm với id: " + id)));
     }
+
     public void deleteProductById(String id) {
-        if(productRepository.existsById(id)) {
+        if (productRepository.existsById(id)) {
             productRepository.deleteById(id);
         } else {
             throw new RuntimeException("Không tìm thấy sản phẩm với id: " + id);
         }
     }
+
     public ProductResponse updateProduct(String id, ProductCreationRequest request) {
-      Product product = productRepository.findById(id).orElseThrow(() -> new RuntimeException("Không tìm thấy sản phẩm với id: " + id));
-        if(product != null) {
-            product.setName(request.getName());
-            product.setPrice(request.getPrice());
-            product.setDescription(request.getDescription());
-            product.setCategory(request.getCategory());
-            return productMapper.toProductResponse(productRepository.save(product));
+        Product product = productRepository.findById(id).orElseThrow(() -> new RuntimeException("Không tìm thấy sản phẩm với id: " + id));
+        if (product != null) {
+            productMapper.updateProductFromRequest(request, product);
+            Product updated = productRepository.save(product);
+            return productMapper.toProductResponse(updated);
         } else {
             throw new RuntimeException("Không tìm thấy sản phẩm với id: " + id);
         }
+    }
+
+    // delete all products
+    public void deleteAllProducts() {
+        productRepository.deleteAll();
     }
 }
